5/q51/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-backend
  namespace: detroit
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: nigelpoulton/ckad:pluralsight_backend
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              path: /api/v1/
              port: api
          livenessProbe:
            httpGet:
              path: /api/v1/
              port: api
          ports:
            - name: api
              containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: detroit
  labels:
    app: backend-svc
spec:
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    app: backend
