5/q51/deny.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: detroit
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
