5/q51/netpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-1
  namespace: detroit
spec:
  podSelector:
    matchLabels:
      app: db
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: detroit
          podSelector:
            matchLabels:
              app: backend
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: detroit
          podSelector:
            matchLabels:
              app: backend
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-2
  namespace: detroit
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: detroit
          podSelector:
            matchLabels:
              app: db

        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
  egress:
    - to:
         - namespaceSelector:
             matchLabels:
               kubernetes.io/metadata.name: detroit
           podSelector:
             matchLabels:
               app: db

         - namespaceSelector:
             matchLabels:
               kubernetes.io/metadata.name: kube-system
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-3
  namespace: detroit
spec:
  podSelector:
    matchLabels:
      app: db
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: detroit
          podSelector:
            matchLabels:
              app: db
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
  egress:
    - to:
         - namespaceSelector:
             matchLabels:
               kubernetes.io/metadata.name: detroit
           podSelector:
             matchLabels:
               app: db
         - namespaceSelector:
             matchLabels:
               kubernetes.io/metadata.name: kube-system
